[gd_scene load_steps=4 format=3 uid="uid://ekjdr0e0hmra"]

[ext_resource type="PackedScene" uid="uid://ckqktut0x5rsr" path="res://items/item.tscn" id="1_aemvv"]
[ext_resource type="Script" path="res://game_board/item_list.gd" id="1_ybr4w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gs6lv"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="ItemList" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = -50.0
grow_vertical = 0
script = ExtResource("1_ybr4w")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_gs6lv")

[node name="VAlign" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="Title" type="Label" parent="Panel/VAlign"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ITEMS"

[node name="HSeparator" type="HSeparator" parent="Panel/VAlign"]
layout_mode = 2

[node name="MovingContainer" type="VBoxContainer" parent="Panel/VAlign"]
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="Panel/VAlign/MovingContainer"]
layout_mode = 2
text = "Moving"

[node name="Item" parent="Panel/VAlign/MovingContainer" instance=ExtResource("1_aemvv")]
layout_mode = 2

[node name="AttackingContainer" type="VBoxContainer" parent="Panel/VAlign"]
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="Panel/VAlign/AttackingContainer"]
layout_mode = 2
text = "Attacking
"

[node name="NoiseContainer" type="VBoxContainer" parent="Panel/VAlign"]
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="Panel/VAlign/NoiseContainer"]
layout_mode = 2
text = "Noise
"

[node name="AtWillContainer" type="VBoxContainer" parent="Panel/VAlign"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Title" type="Label" parent="Panel/VAlign/AtWillContainer"]
layout_mode = 2
text = "At Will"
